@@ -4,15 +4,15 @@
 
     <groupId>slambench</groupId>
     <artifactId>slambench-tornado</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>slambench-tornado</name>
-    <url>https://github.com/beehive-lab/slambench-tornado</url>
+    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <tornado.version>0.0.2-SNAPSHOT</tornado.version>
+        <tornado.version>0.1.0-SNAPSHOT</tornado.version>
     </properties>
 
     <build>
@@ -24,9 +24,6 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <compilerArgs>
-                        <arg>-Djava.ext.dirs=${tornado.sdk}/share/java/tornado:${jvmci.root}/jre/lib/jvmci</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -66,6 +63,8 @@
                     </execution>
                 </executions>
             </plugin>
+
+
         </plugins>
     </build>
 
@@ -104,8 +103,23 @@
         <dependency>
             <groupId>slambench</groupId>
             <artifactId>slambench-java</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>0.0.2</version>
+            <type>jar</type>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/slambench-java-0.0.2.jar</systemPath>
         </dependency>
+
+     <dependency>
+         <groupId>tornado</groupId>
+         <artifactId>tornado-api</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
+     </dependency>
+   
+     <dependency>
+         <groupId>tornado</groupId>
+         <artifactId>tornado-matrices</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
+     </dependency>
 
         <dependency>
             <groupId>freenect</groupId>
@@ -116,27 +130,12 @@
         </dependency>
 
         <dependency>
-            <groupId>tornado</groupId>
-            <artifactId>tornado-collections</artifactId>
-            <version>${tornado.version}</version>
-            <systemPath>${tornado.sdk}/share/java/tornado/tornado-collections-${tornado.version}.jar</systemPath>
+            <groupId>jvmci</groupId>
+            <artifactId>hotspot</artifactId>
             <scope>system</scope>
+            <systemPath>${jvmci.root}/jre/lib/jvmci/jvmci-hotspot.jar</systemPath>
+            <version>${jvmci.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>tornado</groupId>
-            <artifactId>tornado-runtime</artifactId>
-            <version>${tornado.version}</version>
-            <systemPath>${tornado.sdk}/share/java/tornado/tornado-runtime-${tornado.version}.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>tornado</groupId>
-            <artifactId>tornado-drivers-opencl</artifactId>
-            <version>${tornado.version}</version>
-            <systemPath>${tornado.sdk}/share/java/tornado/tornado-drivers-opencl-${tornado.version}.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
     </dependencies>
 </project>
